Fix form fields alignement

--- a/webroot/css/users/edit.css
+++ b/webroot/css/users/edit.css
@@ -38,6 +38,7 @@
     float: left;
     text-align: right;
     padding: 5px 10px;
+    clear: left;
 }
 
 #UserEditForm div.input {
